update html files

--- a/index-02.html
+++ b/index-02.html
@@ -18,14 +18,14 @@
     <!-- [Google Font] Family -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" id="main-font-link" />
     <!-- [Material Icons] https://fonts.google.com/icons -->
-    <link rel="stylesheet" href="/fonts/material.css" />
+    <link rel="stylesheet" href="fonts/material.css" />
     <!-- [remix Icon] -->
-    <link rel="stylesheet" href="/fonts/remixicon/remixicon.css" />
+    <link rel="stylesheet" href="fonts/remixicon/remixicon.css" />
     <!-- [Template CSS Files] -->
-    <link rel="stylesheet" href="/css/style.css" id="main-style-link" />
-    <link rel="stylesheet" href="/css/style-preset.css" />
+    <link rel="stylesheet" href="css/style.css" id="main-style-link" />
+    <link rel="stylesheet" href="css/style-preset.css" />
     <!-- custom theme-1 -->
-    <link rel="stylesheet" href="/css/style-custom.css" />
+    <link rel="stylesheet" href="css/style-custom.css" />
   </head>
   <!-- [Head] end -->
   <!-- [Body] Start -->
@@ -33,7 +33,7 @@
   <body data-pc-preset="theme-1" data-pc-direction="ltr" data-pc-theme="dark">
     <div id="wrapper">
       <!-- [sidebar] -->
-      <nav class="pc-sidebar includeJs" data-include-html="/include/sidebar.html"></nav>
+      <nav class="pc-sidebar includeJs" data-include-html="include/sidebar.html"></nav>
       <!-- //sidebar -->
 
       <!-- [content]  -->
@@ -41,7 +41,7 @@
         <div class="row pt-3">
           <div class="col p-0">
             <div class="card main-visual rounded-2 overflow-hidden position-relative">
-              <div class="includeJs card-body" data-include-html="/include/header.html"></div>
+              <div class="includeJs card-body" data-include-html="include/header.html"></div>
             </div>
             <!-- //main-visual -->
             <div class="row">
@@ -290,27 +290,27 @@
     <script src="/js/basic.js"></script>
 
     <!-- [Page Specific JS] start -->
-    <script src="/js/plugins/apexcharts.min.js"></script>
-    <script src="/js/Widgets/visitor-chart.js"></script>
-    <script src="/js/Widgets/income-overview-chart.js"></script>
-    <script src="/js/Widgets/analytics-report-chart.js"></script>
-    <script src="/js/Widgets/sales-report-chart.js"></script>
+    <script src="js/plugins/apexcharts.min.js"></script>
+    <script src="js/Widgets/visitor-chart.js"></script>
+    <script src="js/Widgets/income-overview-chart.js"></script>
+    <script src="js/Widgets/analytics-report-chart.js"></script>
+    <script src="js/Widgets/sales-report-chart.js"></script>
     <!-- [Page Specific JS] end-->
 
     <!-- Required Js -->
-    <script src="/js/plugins/popper.min.js"></script>
-    <script src="/js/plugins/simplebar.min.js"></script>
-    <script src="/js/plugins/bootstrap.min.js"></script>
-    <script src="/js/fonts/custom-font.js"></script>
-    <script src="/js/fonts/custom-ant-icon.js"></script>
-    <script src="/js/plugins/i18next.min.js"></script>
-    <script src="/js/plugins/i18nextHttpBackend.min.js"></script>
-    <script src="/js/pcoded.js"></script>
-    <script src="/js/theme.js"></script>
-    <script src="/js/multi-lang.js"></script>
-    <script src="/js/plugins/feather.min.js"></script>
+    <script src="js/plugins/popper.min.js"></script>
+    <script src="js/plugins/simplebar.min.js"></script>
+    <script src="js/plugins/bootstrap.min.js"></script>
+    <script src="js/fonts/custom-font.js"></script>
+    <script src="js/fonts/custom-ant-icon.js"></script>
+    <script src="js/plugins/i18next.min.js"></script>
+    <script src="js/plugins/i18nextHttpBackend.min.js"></script>
+    <script src="js/pcoded.js"></script>
+    <script src="js/theme.js"></script>
+    <script src="js/multi-lang.js"></script>
+    <script src="js/plugins/feather.min.js"></script>
 
-    <script src="/js/chart.js"></script>
+    <script src="js/chart.js"></script>
   </body>
   <!-- [Body] end -->
 </html>
