--- a/sub-01.html
+++ b/sub-01.html
@@ -12,20 +12,20 @@
     <meta name="keywords" content="SENTINEL X" />
     <meta name="author" content="CodedThemes" />
 
-    <link href="/css/plugins/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/plugins/bootstrap.min.css" rel="stylesheet" />
     <!-- [Favicon] icon -->
-    <link rel="icon" href="/images/favicon.svg" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.svg" type="image/x-icon" />
     <!-- [Google Font] Family -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" id="main-font-link" />
     <!-- [Material Icons] https://fonts.google.com/icons -->
-    <link rel="stylesheet" href="/fonts/material.css" />
+    <link rel="stylesheet" href="fonts/material.css" />
     <!-- [remix Icon] -->
-    <link rel="stylesheet" href="/fonts/remixicon/remixicon.css" />
+    <link rel="stylesheet" href="fonts/remixicon/remixicon.css" />
     <!-- [Template CSS Files] -->
-    <link rel="stylesheet" href="/css/style.css" id="main-style-link" />
-    <link rel="stylesheet" href="/css/style-preset.css" />
+    <link rel="stylesheet" href="css/style.css" id="main-style-link" />
+    <link rel="stylesheet" href="css/style-preset.css" />
     <!-- custom theme-1 -->
-    <link rel="stylesheet" href="/css/style-custom.css" />
+    <link rel="stylesheet" href="css/style-custom.css" />
   </head>
   <!-- [Head] end -->
   <!-- [Body] Start -->
@@ -33,7 +33,7 @@
   <body data-pc-preset="theme-1" data-pc-direction="ltr" data-pc-theme="dark">
     <div id="wrapper">
       <!-- [sidebar] -->
-      <nav class="pc-sidebar includeJs" data-include-html="/include/sidebar.html"></nav>
+      <nav class="pc-sidebar includeJs" data-include-html="include/sidebar.html"></nav>
       <!-- //sidebar -->
 
       <!-- [content]  -->
@@ -41,7 +41,7 @@
         <div class="row pt-3">
           <div class="col p-0">
             <div class="card main-visual rounded-2 overflow-hidden position-relative">
-              <div class="includeJs card-body" data-include-html="/include/sub-header.html"></div>
+              <div class="includeJs card-body" data-include-html="include/sub-header.html"></div>
             </div>
             <!-- //main-visual -->
             <div class="row">
