--- a/sub-01.html
+++ b/sub-01.html
@@ -131,25 +131,25 @@
     <!-- //wrapper -->
 
     <!-- js -->
-    <script src="/js/basic.js"></script>
+    <script src="js/basic.js"></script>
 
     <!-- Required Js -->
-    <script src="/js/plugins/popper.min.js"></script>
-    <script src="/js/plugins/simplebar.min.js"></script>
-    <script src="/js/plugins/bootstrap.min.js"></script>
-    <script src="/js/fonts/custom-font.js"></script>
-    <script src="/js/fonts/custom-ant-icon.js"></script>
-    <script src="/js/plugins/i18next.min.js"></script>
-    <script src="/js/plugins/i18nextHttpBackend.min.js"></script>
-    <script src="/js/pcoded.js"></script>
-    <script src="/js/theme.js"></script>
-    <script src="/js/multi-lang.js"></script>
-    <script src="/js/plugins/feather.min.js"></script>
-    <script src="/js/plugins/ag-grid-community.min.js"></script>
+    <script src="js/plugins/popper.min.js"></script>
+    <script src="js/plugins/simplebar.min.js"></script>
+    <script src="js/plugins/bootstrap.min.js"></script>
+    <script src="js/fonts/custom-font.js"></script>
+    <script src="js/fonts/custom-ant-icon.js"></script>
+    <script src="js/plugins/i18next.min.js"></script>
+    <script src="js/plugins/i18nextHttpBackend.min.js"></script>
+    <script src="js/pcoded.js"></script>
+    <script src="js/theme.js"></script>
+    <script src="js/multi-lang.js"></script>
+    <script src="js/plugins/feather.min.js"></script>
+    <script src="js/plugins/ag-grid-community.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script> -->
 
     <!-- js 추가 -->
-    <script src="/js/table.js"></script>
+    <script src="js/table.js"></script>
   </body>
   <!-- [Body] end -->
 </html>
