--- a/index-02.html
+++ b/index-02.html
@@ -260,7 +260,7 @@
                         <div class="log-wrap">
                            <!-- [리스트 시작 :: 출입기록이 없을때] -->
                            <div class="list-none text-center position-absolute top-50 start-50 translate-middle">
-                            <i class="d-block mb-3"><img src="/images/customization/i-log-door.svg" alt="출입기록 아이콘"></i>
+                            <i class="d-block mb-3"><img src="images/customization/i-log-door.svg" alt="출입기록 아이콘"></i>
                             <h4 class="text-white" data-i18n="accessRecords">출입 기록이 없습니다.</h4>
                             <p class="text-white-50 lh-base" data-i18n="accessRecords2">출입 이력이 없습니다.<br> 출입시스템이 정상적으로 작동하는지 확인하세요.</p>
                           </div>
@@ -287,7 +287,7 @@
     <!-- //wrapper -->
 
     <!-- js -->
-    <script src="/js/basic.js"></script>
+    <script src="js/basic.js"></script>
 
     <!-- [Page Specific JS] start -->
     <script src="js/plugins/apexcharts.min.js"></script>
