영문 국문 페이지 수정 및 추가, 메인 비주얼 수정, ag그리드 수정

--- a/sub-01.html
+++ b/sub-01.html
@@ -96,7 +96,7 @@
                               <!-- [버튼] -->
                               <div class="btn-wrap d-flex align-items-center gap-2">
                                 <button type="button" class="btn btn-gray btn-md"><i class="ri-reset-left-fill"></i></button>
-                                <button class="btn ms-auto btn-primary" type="button">Search</button>
+                                <button class="btn ms-auto btn-primary w-100" type="button"><i class="ri-search-line fs-6 me-2"></i>Search</button>
                               </div>
                                <!-- //버튼 -->
                           </div>
@@ -105,8 +105,12 @@
                           <div class="search-list-box">
                             <div class="d-flex align-items-center">
                               <h5 class="text-white mb-3">Entry Log</h5>
+                              <ul class="d-flex align-items-center gap-2 fs-6 ps-2">
+                                <li>All <b class="text-info">800</b></li>
+                                <li>1/200 page</li>
+                              </ul>
                             </div>
-                            <div id="myGrid1"></div>
+                            <div id="my-grid1"></div>
                           </div>
                           <!-- //검색결과 -->
                         </div>
