최근출입기록 수정

--- a/index.html
+++ b/index.html
@@ -269,23 +269,20 @@
                             <!-- [정상 출입] -->
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <!-- [오류 발생] -->
                             <li class="list-group-item rounded-2 error">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                <div class="d-flex justify-content-between align-items-center mb-1">
                                   <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
                                   <span class="time text-muted text-white-50 fs-5">16:00:09</span>
                                 </div>
+                                <p class="error-txt fs-5 d-flex gap-2"  data-i18n="logerrorSample">지문 인식 오류</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                   <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
                                   <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
@@ -295,109 +292,81 @@
                             <!-- loop -->
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
-                                </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
-                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
+                                </div>
+                              </a>
+                            </li>
+                            <li class="list-group-item rounded-2">
+                              <a href="#" class="rounded text-body">
+                                <div class="d-flex justify-content-between align-items-center">
+                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                  <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
