--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="tab-pane fade show active" id="tab-menu-pane-1" role="tabpanel" aria-labelledby="tab-menu-1" tabindex="0">
                   <!-- [메인 대시보드 시작] -->
                   <div class="con-wrap row" id="main-dashboard">
-                    <div class="col-8">
+                    <div class="col-lg-8 col-md-12">
                       <div class="card p-3">
                         <div class="d-flex align-items-center gap-2 mb-3">
                           <h5 class="text-white mb-0" data-i18n="doorControl">출입문 제어</h5>
@@ -247,7 +247,7 @@
                       </div>
                     </div>
                     <!-- [출입문 관리] -->
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-12">
                       <div class="card p-3 mb-0">
                         <div class="d-flex justify-content-between align-items-center">
                           <h5 class="text-white mb-2" data-i18n="recentEntry">최근 출입 기록</h5>
