--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <div class="card col p-3 mb-0">
                           <h5 class="text-white mb-2" data-i18n="overallEntrance">전체 출입문 개요</h5>
                           <div class="row door-overview">
-                            <div class="col-6">
+                            <div class="col-xxl-6 col-md-6 col-sm-12">
                               <div class="card">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="normalOperation">정상작동</h5>
@@ -201,7 +201,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-xxl-6 col-md-6 col-sm-12">
                               <div class="card">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="deactivation">비활성화</h5>
@@ -209,16 +209,16 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-6">
-                              <div class="card mb-0">
+                            <div class="col-xxl-6 col-md-6 col-sm-12">
+                              <div class="card">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="malfunction">기능 고장</h5>
                                   <p class="card-text"><strong>4</strong></p>
                                 </div>
                               </div>
                             </div>
-                            <div class="col-6">
-                              <div class="card mb-0">
+                            <div class="col-xxl-6 col-md-6 col-sm-12">
+                              <div class="card">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="underInspection">점검중</h5>
                                   <p class="card-text"><strong>34</strong></p>
