--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
                           </div>
                         </div>
                         <!-- 리스트 -->
+                        <!-- // 250306  list group안에 <h5>태그 <p>태그로 변경, .text-body font-style 추가, 폰트 길이 테스트 및 마진 수정 -->
                         <div class="log-wrap">
                            <!-- [리스트 시작 :: 출입기록이 없을때 - 필요할때 사용] -->
                            <!-- <div class="list-none text-center position-absolute top-50 start-50 translate-middle">
@@ -265,39 +266,80 @@
                             <p class="text-white-50 lh-base" data-i18n="accessRecords2">출입 이력이 없습니다.<br> 출입시스템이 정상적으로 작동하는지 확인하세요.</p>
                           </div> -->
                           <!-- [리스트 시작 :: 출입기록이 있을때] -->
-                          <ul class="list-group mt-3 position-relative">
+                          <ul class="list-group log-list mt-3 position-relative">
                             <!-- [정상 출입] -->
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
-                            <!-- [오류 발생] -->
+                            <!-- [오류 발생 지문 인식 오류] -->
                             <li class="list-group-item rounded-2 error">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-1">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
+                                <div class="flex-between-center mb-2">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
+                                  <span class="time text-muted">2024-10-03 15:30</span>
                                 </div>
-                                <p class="error-txt fs-5 d-flex gap-2"  data-i18n="logerrorSample">지문 인식 오류</p>
-                                <div class="d-flex justify-content-between align-items-center">
+                                <div class="d-flex gap-2">
+                                  <i class="ri-fingerprint-line"></i>
+                                  <p class="error-txt"  data-i18n="logerrorSample">지문 인식 오류</p>
+                                </div>
+                                <div class="flex-between-center">
+                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
+                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                </div>
+                              </a>
+                            </li>
+                            <!-- [오류 아이콘 - 인가되지 않은 사용자 ] -->
+                            <li class="list-group-item rounded-2 error">
+                              <a href="#" class="rounded text-body">
+                                <div class="flex-between-center mb-2">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
+                                  <span class="time text-muted">2024-10-03 15:30</span>
+                                </div>
+                                <div class="d-flex gap-2">
+                                  <i class="ri-shield-user-line"></i>
+                                  <p class="error-txt" data-i18n="logerrorSample1">인가되지 않은 사용자</p>
+                                </div>
+                                <div class="flex-between-center">
+                                  <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
+                                  <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
+                                </div>
+                              </a>
+                            </li>
+                            <!-- [오류 아이콘 - Unknown ] -->
+                            <li class="list-group-item rounded-2 error">
+                              <a href="#" class="rounded text-body">
+                                <div class="flex-between-center mb-2">
+                                  <p class="tit" data-i18n="recordSamplelong">A동 1층 메인 정문 01</p>
+                                  <span class="time text-muted">2024-10-03 15:30</span>
+                                </div>
+                                <div class="d-flex gap-2">
+                                  <i class="ri-error-warning-line"></i>
+                                  <p class="error-txt" data-i18n="unknown">Unknown</p>
+                                </div>
+                                <div class="flex-between-center">
                                   <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
                                   <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
                                 </div>
                               </a>
                             </li>
                             <!-- loop -->
+                            <!-- 텍스트 길이 테스트 -->
                             <li class="list-group-item rounded-2 error">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center mb-1">
-                                  <h5 class="text-body" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
-                                  <span class="time text-muted text-white-50 fs-5">16:00:09</span>
+                                <div class="flex-between-center mb-2">
+                                  <p class="tit" data-i18n="recordSamplelong">A동 1층 메인 정문 01</p>
+                                  <span class="time text-muted">2024-10-03 15:30</span>
                                 </div>
-                                <p class="error-txt v2 fs-5 d-flex gap-2"  data-i18n="logerrorSample1">인가되지 않은 사용자</p>
-                                <div class="d-flex justify-content-between align-items-center">
+                                <div class="d-flex gap-2">
+                                  <i class="ri-error-warning-line"></i>
+                                  <p class="erro-txt"  data-i18n="unknown">Unknown</p>
+                                </div>
+                                <div class="flex-between-center">
                                   <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
                                   <span class="department text-white-50" data-i18n="recordManage">경영지원본부 / 인사팀 / 과장</span>
                                 </div>
@@ -305,80 +347,80 @@
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSamplelong">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
                             </li>
                             <li class="list-group-item rounded-2">
                               <a href="#" class="rounded text-body">
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <h5 class="text-body mb-0" data-i18n="recordSample">A동 1층 메인 정문 01</h5>
+                                <div class="flex-between-center">
+                                  <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
                                   <span class="profile text-muted text-white-50 d-flex gap-2 fs-5" data-i18n="recordName">배경구</span>
                                 </div>
                               </a>
@@ -410,7 +452,7 @@
 
     <!-- js -->
     <script src="js/basic.js"></script>
-    <script src="js/table.js"></script>
+    <!-- <script src="js/table.js"></script> -->
 
     <!-- [Page Specific JS] start -->
     <script src="js/plugins/apexcharts.min.js"></script>
@@ -433,7 +475,11 @@
     <script src="js/multi-lang.js"></script>
     <script src="js/plugins/feather.min.js"></script>
     
+<script>
+ 
 
+
+</script>
     <script src="js/chart.js"></script>
   </body>
   <!-- [Body] end -->
