--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                               <a href="#" class="rounded text-body">
                                 <div class="flex-between-center mb-2">
                                   <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
-                                  <span class="time text-muted">2024-10-03 15:30</span>
+                                  <span class="time text-muted">14:03:23</span>
                                 </div>
                                 <div class="d-flex gap-2">
                                   <i class="ri-fingerprint-line"></i>
@@ -298,7 +298,7 @@
                               <a href="#" class="rounded text-body">
                                 <div class="flex-between-center mb-2">
                                   <p class="tit" data-i18n="recordSample">A동 1층 메인 정문 01</p>
-                                  <span class="time text-muted">2024-10-03 15:30</span>
+                                  <span class="time text-muted">14:03:23</span>
                                 </div>
                                 <div class="d-flex gap-2">
                                   <i class="ri-shield-user-line"></i>
@@ -315,7 +315,7 @@
                               <a href="#" class="rounded text-body">
                                 <div class="flex-between-center mb-2">
                                   <p class="tit" data-i18n="recordSamplelong">A동 1층 메인 정문 01</p>
-                                  <span class="time text-muted">2024-10-03 15:30</span>
+                                  <span class="time text-muted">14:03:23</span>
                                 </div>
                                 <div class="d-flex gap-2">
                                   <i class="ri-error-warning-line"></i>
@@ -333,7 +333,7 @@
                               <a href="#" class="rounded text-body">
                                 <div class="flex-between-center mb-2">
                                   <p class="tit" data-i18n="recordSamplelong">A동 1층 메인 정문 01</p>
-                                  <span class="time text-muted">2024-10-03 15:30</span>
+                                  <span class="time text-muted">14:03:23</span>
                                 </div>
                                 <div class="d-flex gap-2">
                                   <i class="ri-error-warning-line"></i>
