--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                 </div>
                               </a>
                             </li>
-                            <!-- [오류 아이콘 - Unknown ] -->
+                            <!-- [오류 아이콘 - 카드오류 ] -->
                             <li class="list-group-item rounded-2 error">
                               <a href="#" class="rounded text-body">
                                 <div class="flex-between-center mb-2">
@@ -318,8 +318,8 @@
                                   <span class="time text-muted">14:03:23</span>
                                 </div>
                                 <div class="d-flex gap-2">
-                                  <i class="ri-error-warning-line"></i>
-                                  <p class="error-txt" data-i18n="unknown">Unknown</p>
+                                  <i class="ri-bank-card-line"></i>
+                                  <p class="error-txt" data-i18n="unknown"></p>
                                 </div>
                                 <div class="flex-between-center">
                                   <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
@@ -336,7 +336,7 @@
                                   <span class="time text-muted">14:03:23</span>
                                 </div>
                                 <div class="d-flex gap-2">
-                                  <i class="ri-error-warning-line"></i>
+                                  <i class="ri-bank-card-line"></i>
                                   <p class="erro-txt"  data-i18n="unknown">Unknown</p>
                                 </div>
                                 <div class="flex-between-center">
