--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                               </div>
                             </div>
                             <div class="col-xxl-6 col-md-6 col-sm-12">
-                              <div class="card">
+                              <div class="card mb-0">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="malfunction">기능 고장</h5>
                                   <p class="card-text"><strong>4</strong></p>
@@ -218,7 +218,7 @@
                               </div>
                             </div>
                             <div class="col-xxl-6 col-md-6 col-sm-12">
-                              <div class="card">
+                              <div class="card mb-0">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="underInspection">점검중</h5>
                                   <p class="card-text"><strong>34</strong></p>
