디자인 및 기능 추가

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                               <div class="card">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="normalOperation">정상작동</h5>
-                                  <p class="card-text"><strong>280</strong></p>
+                                  <p class="card-text"><strong class="counter" data-target="280">280</strong></p>
                                 </div>
                               </div>
                             </div>
@@ -205,7 +205,7 @@
                               <div class="card">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="deactivation">비활성화</h5>
-                                  <p class="card-text"><strong>16</strong></p>
+                                  <p class="card-text"><strong class="counter" data-target="16">16</strong></p>
                                 </div>
                               </div>
                             </div>
@@ -213,7 +213,7 @@
                               <div class="card mb-0">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="malfunction">기능 고장</h5>
-                                  <p class="card-text"><strong>4</strong></p>
+                                  <p class="card-text"><strong class="counter" data-target="4">4</strong></p>
                                 </div>
                               </div>
                             </div>
@@ -221,7 +221,7 @@
                               <div class="card mb-0">
                                 <div class="card-body">
                                   <h5 class="card-title text-white-50 fw-normal" data-i18n="underInspection">점검중</h5>
-                                  <p class="card-text"><strong>34</strong></p>
+                                  <p class="card-text"><strong class="counter" data-target="34">34</strong></p>
                                 </div>
                               </div>
                             </div>
