--- a/sub-0201.html
+++ b/sub-0201.html
@@ -49,10 +49,10 @@
                 <div class="tab-pane fade show active" id="tab-menu-pane-1" role="tabpanel" aria-labelledby="tab-menu-1" tabindex="0">
                   <div class="con-wrap">
                     <div class="img-box">
-                      <img src="images/customization/user-list-off.svg" alt="userlist" class="list-img-off" style="height: 730px;">
+                      <img src="images/customization/user-list-on.svg" alt="userlist" class="list-img-off" style="height: 730px;">
                     </div>
                     <!-- [list 기본상태] -->
-                    <div class="info-wrap">
+                    <div class="info-wrap active">
                       <div class="info-box s01">
                         <div class="d-flex align-items-center justify-content-between mb-3">
                           <h5 class="tit mb-0 p-0">Basic Information</h5>
@@ -108,7 +108,9 @@
                               </li>
                               <li>
                                 <p>Card Information</p>
-                                <input type="text" value="" readonly>
+                                <div class="d-flex align-items-center cbox" style="height: 38px;width: 65%;">
+                                  <span class="tag">148</span>
+                                </div>
                               </li>
                             </ul>
                           </div>
