update modal, index animation

--- a/sub-02.html
+++ b/sub-02.html
@@ -154,8 +154,8 @@
                         </li>
                       </ul>
                       <div class="btn-wrap">
-                        <button type="button" class="submit">등록</button>
-                        <button type="button" class="close">취소</button>
+                        <button type="button" class="submit">check</button>
+                        <button type="button" class="close">cancel</button>
                       </div>
                     </div>
                     <!-- //modal-inner -->
